--- a/Homepage/Ver. 2/index.html
+++ b/Homepage/Ver. 2/index.html
@@ -8,7 +8,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Roboto:900,100,300,700,400' rel='stylesheet' type='text/css'>
 	<!--Roboto Slab-->
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300' rel='stylesheet' type='text/css'>
-	<link type="text/css" rel="stylesheet" href="../Ver. 1/style.css" />
+	<link type="text/css" rel="stylesheet" href="https://github.com/john-zmw/Upcycle-solo/blob/master/Homepage/Ver.%202/style.css" />
 </head>
 <body>
 	<div class="nav"> 
